<resources>
    <string name="app_name">smart intervalometer</string>
    <string name="textview1">TextView</string>
    <string name="photo_cout_label">nombre de photo :</string>
    <string name="photo_duration_label">durée de chaque photo :</string>
    <string name="photo_pause_label">pause entre chaque photo :</string>
    <string name="seek_bar_init_value">1</string>
    <string name="seek_bar_init_sec_value">1 s</string>
    <string name="start_button_text">start</string>
    <string name="pause_button_text">pause</string>
    <string name="reset_button_text">reset</string>
    <string name="Select_list_textview_text">Périphérique bluetooth :</string>
    <string name="refresh_button_text">refresh</string>
    <string name="disconnect_button_text">déconnexion</string>
    <string name="test">test</string>
    <string name="progress_bar_textview_text">progression :</string>
    <string name="device_name_label">Device name :</string>
    <string name="device_status_label">Device status :</string>
</resources>
