<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/photo_count_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_cout_label"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBar_photo_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:max="99" />

            <TextView
                android:id="@+id/seekBar_photo_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seek_bar_init_value" />

        </LinearLayout>

        <TextView
            android:id="@+id/photo_duration_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_duration_label"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBar_photo_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:max="20" />

            <TextView
                android:id="@+id/seekBar_photo_duration_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seek_bar_init_sec_value" />

        </LinearLayout>

        <TextView
            android:id="@+id/photo_pause_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_pause_label"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBar_photo_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:max="100" />

            <TextView
                android:id="@+id/seekBar_photo_pause_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seek_bar_init_sec_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_button"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button_text" />

            <Button
                android:id="@+id/pause_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause_button_text" />

            <Button
                android:id="@+id/reset_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_button_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/progress_bar_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress_bar_textview_text" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/disconnect_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>